Update title and improve detail panel styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7-Digit Master: Pillar Analysis</title>
+    <title>7-Digit Master: Full Interpretation</title>
     <style>
         :root { --primary: #1a2a3a; --gold: #c5a02e; --bg: #f4f7f6; --kalakini: #ffcdd2; --good-base: #fff9c4; --personal: #e3f2fd; }
         body { font-family: 'Tahoma', sans-serif; background: var(--bg); margin: 0; padding: 10px; display: flex; flex-direction: column; align-items: center; }
@@ -22,11 +22,11 @@
         .row-base { border-top: 2px solid #333; background: #fafafa; }
         .base-label { font-size: 10px; font-weight: bold; color: #b71c1c; }
         .base-value { font-size: 24px; font-weight: bold; color: #b71c1c; }
-        .details-panel { padding: 15px; background: #fff; border: 2px solid var(--primary); border-radius: 8px; font-size: 14px; min-height: 150px; line-height: 1.6; }
+        .details-panel { padding: 15px; background: #fff; border: 2px solid var(--primary); border-radius: 8px; font-size: 14px; min-height: 180px; line-height: 1.6; }
         .details-title { font-weight: bold; color: var(--primary); border-bottom: 2px solid var(--gold); margin-bottom: 10px; padding-bottom: 5px; font-size: 16px; }
         .pillar-box { background: #eef2f5; padding: 8px; border-radius: 5px; margin-bottom: 10px; font-weight: bold; color: #2c3e50; border-left: 4px solid var(--gold); }
-        .good-tag { color: #2e7d32; font-weight: bold; }
-        .bad-tag { color: #d32f2f; font-weight: bold; }
+        .good-tag { color: #2e7d32; font-weight: bold; background: #e8f5e9; padding: 2px 5px; border-radius: 4px; }
+        .bad-tag { color: #d32f2f; font-weight: bold; background: #ffebee; padding: 2px 5px; border-radius: 4px; }
     </style>
 </head>
 <body>
@@ -40,38 +40,54 @@
     </div>
     <table class="result-table"><tbody id="tableBody"></tbody></table>
     <div id="detailsBox" class="details-panel">
-        <div id="detailsTitle" class="details-title">บทวิเคราะห์เสาพยากรณ์</div>
-        <div id="detailsContent">คลิกที่เลขฐานเพื่อวิเคราะห์ความสัมพันธ์ของ 3 ภพเหนือฐาน</div>
+        <div id="detailsTitle" class="details-title">บทวิเคราะห์พยากรณ์</div>
+        <div id="detailsContent">คลิกที่ช่องภพหรือเลขฐานเพื่ออ่านคำพยากรณ์เจาะลึก</div>
     </div>
 </div>
 
 <script>
     const houses = [
-        ["อัตตะ", "หินะ", "ธนัง", "ปิตา", "มาตา", "โภคา", "มัชฌิมา"],
-        ["ตนุ", "กดุมภะ", "สหัชชะ", "พันธุ", "ปุตตะ", "อริ", "ปัตนิ"],
-        ["มรณะ", "สุภะ", "กัมมะ", "ลาภะ", "พยายะ", "ทาสา", "ทาสี"]
+        ["อัตตะ", "หินะ", "ธนัง", "สหัสชะ", "ปิตา", "มาตา", "โภคา"],
+        ["มัชฌิมา", "ตนุ", "กดุมภะ", "สหัชชะ", "พันธุ", "ปุตตะ", "อริ"],
+        ["ปัตนิ", "มรณะ", "สุภะ", "กัมมะ", "ลาภะ", "พยายะ", "ทาสา"]
     ];
 
+    const planetMeanings = {
+        1: { name: "อาทิตย์", good: "มีเกียรติ ยศศักดิ์ ความเป็นผู้นำ มีอำนาจเด็ดขาด", bad: "ใจร้อน ถือตัวจัด หลงอำนาจ มักมีปัญหากับผู้ใหญ่" },
+        2: { name: "จันทร์", good: "เมตตามหานิยม งานบริการเด่น ได้รับความช่วยเหลือจากผู้หญิง ทรัพย์คล่องตัว", bad: "ใจอ่อนจนเสียการ ฟุ้งซ่าน จิตใจไม่นิ่ง เปลี่ยนใจง่าย" },
+        3: { name: "อังคาร", good: "ขยัน กล้าหาญ ตัดสินใจรวดเร็ว ชนะอุปสรรคและศัตรู", bad: "วู่วาม อุบัติเหตุ ผ่าตัด ทะเลาะวิวาทรุนแรง" },
+        4: { name: "พุธ", good: "ฉลาดในการสื่อสาร เจรจาค้าขายดีเด่น งานเอกสารสำเร็จ", bad: "คำพูดสร้างศัตรู ถูกนินทา เอกสารสัญญาผิดพลาด" },
+        5: { name: "พฤหัส", good: "มีสติปัญญา ผู้ใหญ่เมตตา ประสบความสำเร็จทางวิชาการและศีลธรรม", bad: "ดื้อรั้นในเหตุผลตัวเอง เชื่อมั่นเกินไปจนเสียงาน" },
+        6: { name: "ศุกร์", good: "โชคลาภ ทรัพย์สิน ความรักสมบูรณ์ มีความสุขสำราญ", bad: "หลงระเริงกามารมณ์ ฟุ่มเฟือย ปัญหาความรักซ้อน" },
+        7: { name: "เสาร์", good: "อดทนสูง จัดการโครงการระยะยาวดี มีโชคจากอสังหาริมทรัพย์", bad: "เครียดจัด ภาระหนักอึ้ง โรคเรื้อรัง การรอคอยที่ทรมาน" }
+    };
+
+    const houseContexts = {
+        "อัตตะ": "ตัวตน/จิตใจในขณะนี้", "หินะ": "จุดอ่อน/อุปสรรค", "ธนัง": "เงินติดตัว/ทรัพย์สิน", "สหัสชะ": "การติดต่อใกล้ชิด", "ปิตา": "ผู้ใหญ่/พ่อ/หัวหน้า", "มาตา": "แม่/ผู้ดูแล/ความอบอุ่น", "โภคา": "บ้าน/รถ/ทรัพย์ใหญ่",
+        "มัชฌิมา": "ความพอดี/ส่วนกลาง", "ตนุ": "ภาพลักษณ์/สิ่งที่แสดงออก", "กดุมภะ": "รายได้/การทำมาหากิน", "สหัชชะ": "สังคม/เพื่อนฝูง/การเจรจา", "พันธุ": "ญาติพี่น้อง/รากฐานครอบครัว", "ปุตตะ": "บุตร/บริวาร/สิ่งที่เริ่มใหม่", "อริ": "อุปสรรค/คู่แข่ง/ปัญหาสุขภาพ",
+        "ปัตนิ": "คู่ครอง/หุ้นส่วน/คู่สัญญา", "มรณะ": "การสูญเสีย/การเปลี่ยนแปลง/ต่างประเทศ", "สุภะ": "ความสำเร็จ/ผู้ใหญ่หนุน/ต่างแดน", "กัมมะ": "งาน/หน้าที่/สิ่งที่ต้องทำ", "ลาภะ": "โชคลาภ/ความสำเร็จที่ได้มา", "พยายะ": "ความลับ/สิ่งที่ปิดบัง/ความเสื่อม", "ทาสา": "ความเหนื่อยยาก/งานส่วนรวม"
+    };
+
     const baseInterpretations = {
-        3: { name: "กำลังดาวจันทร์ (เล็ก)", good: "มีเสน่ห์ เมตตา มีการเปลี่ยนแปลงในทางที่ดีนุ่มนวล", bad: "โลเล จิตใจอ่อนไหวง่าย พึ่งพาใครลำบาก" },
-        4: { name: "กำลังดาวพุธ (เล็ก)", good: "เจรจาดี มีไหวพริบ สื่อสารคล่องตัว", bad: "ระวังคำพูดสร้างศัตรู เอกสารมีปัญหา" },
-        5: { name: "กำลังดาวพฤหัส (เล็ก)", good: "มีผู้ใหญ่ให้คำปรึกษา เริ่มต้นเรียนรู้สิ่งใหม่ได้ดี", bad: "ดื้อรั้น ยึดติดความคิดตัวเองเกินไป" },
-        6: { name: "กำลังดาวอาทิตย์", good: "มีชื่อเสียง มีพลังสร้างสรรค์ กล้าเผชิญหน้า", bad: "ใจร้อน อวดดี ระวังเรื่องยศตำแหน่ง" },
-        7: { name: "กำลังดาวเสาร์ (เล็ก)", good: "มีความอดทนสูง ทำงานละเอียดได้ดี", bad: "เครียดจัด วิตกกังวล อมทุกข์" },
-        8: { name: "กำลังดาวอังคาร", good: "ขยัน รวดเร็ว ชนะอุปสรรคด้วยความกล้า", bad: "ระวังอุบัติเหตุ ทะเลาะวิวาท ตัดสินใจวู่วาม" },
+        3: { name: "กำลังจันทร์เล็ก", good: "มีเสน่ห์ เมตตา มีการเปลี่ยนแปลงนุ่มนวล", bad: "โลเล จิตใจอ่อนไหวง่าย" },
+        4: { name: "กำลังพุธเล็ก", good: "เจรจาดี มีไหวพริบ สื่อสารคล่อง", bad: "ระวังคำพูดสร้างศัตรู" },
+        5: { name: "กำลังพฤหัสเล็ก", good: "มีผู้ใหญ่ให้คำปรึกษา เริ่มต้นสิ่งใหม่ได้ดี", bad: "ดื้อรั้น ยึดติดความคิดตัวเอง" },
+        6: { name: "กำลังอาทิตย์", good: "มีชื่อเสียง พลังสร้างสรรค์สูง กล้าเผชิญหน้า", bad: "ใจร้อน อวดดี ระวังเรื่องยศตำแหน่ง" },
+        7: { name: "กำลังเสาร์เล็ก", good: "อดทนสูง ทำงานละเอียดได้ดี", bad: "เครียดจัด วิตกกังวล" },
+        8: { name: "กำลังอังคาร", good: "ขยัน รวดเร็ว ชนะอุปสรรคด้วยความกล้า", bad: "ระวังอุบัติเหตุ ทะเลาะวิวาท" },
         9: { name: "พระเกตุ", good: "สิ่งศักดิ์สิทธิ์คุ้มครอง ลางสังหรณ์แม่น โชคลาภกะทันหัน", bad: "เพ้อฝัน ฟุ้งซ่าน เข้าใจยาก" },
-        10: { name: "กำลังดาวเสาร์ (มฤตยู)", good: "การเปลี่ยนแปลงเพื่อสิ่งใหม่ ความมั่นคงระยะยาว", bad: "ภาระหนักอึ้ง ความลับที่ถูกเปิดเผย เรื่องคาดไม่ถึง" },
-        11: { name: "ราชาโชค", good: "โชคลาภมาเองโดยไม่ต้องเหนื่อย มีคนหยิบยื่นโอกาสให้", bad: "ประมาท ขาดการเตรียมตัวเพราะได้มาง่าย" },
-        12: { name: "กำลังดาวราหู", good: "พลิกแพลงเก่ง ทันคน ธุรกิจสีเทาโดดเด่น", bad: "มัวเมา หลงผิด ถูกหลอกลวงหรือไปหลอกเขา" },
-        13: { name: "มหาอุจ (กำลังอังคาร)", good: "พลังอำนาจสูงสุด แข็งแกร่ง ชนะคู่แข่งเด็ดขาด", bad: "แตกหักง่าย ใช้อารมณ์จนเสียเรื่อง" },
+        10: { name: "กำลังเสาร์ (มฤตยู)", good: "การเปลี่ยนแปลงเพื่อสิ่งใหม่ ความมั่นคงระยะยาว", bad: "ภาระหนักอึ้ง ความลับถูกเปิดเผย" },
+        11: { name: "ราชาโชค", good: "โชคลาภมาเองโดยไม่ต้องเหนื่อย มีคนหยิบยื่นโอกาส", bad: "ประมาท ขาดการเตรียมตัว" },
+        12: { name: "กำลังราหู", good: "พลิกแพลงเก่ง ทันคน ธุรกิจต่างชาติโดดเด่น", bad: "มัวเมา หลงผิด ถูกหลอกลวง" },
+        13: { name: "มหาอุจ", good: "พลังอำนาจสูงสุด แข็งแกร่ง ชนะคู่แข่งเด็ดขาด", bad: "แตกหักง่าย ใช้อารมณ์เสียเรื่อง" },
         14: { name: "จักรพรรดิ", good: "มั่งคั่ง มั่นคง บารมีสูง ได้เป็นเจ้าคนนายคน", bad: "ภาระรับผิดชอบสูงมากจนเครียด" },
-        15: { name: "กำลังดาวจันทร์ (มหาเสน่ห์)", good: "เมตตามหานิยม ทรัพย์สินไหลลื่น มีความสุขสมหวัง", bad: "ใจอ่อนจนเสียการ ฟุ่มเฟือยเกินตัว" },
-        16: { name: "โสฬสมงคล", good: "มงคลสูงสุด ปลอดภัยจากอันตราย ประสบความสำเร็จรอบด้าน", bad: "หากทำผิดศีลจะได้รับผลกรรมเร็วและแรง" },
-        17: { name: "กำลังดาวพุธ (มหาปัญญา)", good: "สติปัญญาเลิศ เจรจาค้าขายรุ่งเรืองที่สุด", bad: "คิดมากเกินไปจนประสาทเสีย หรือใช้เล่ห์เหลี่ยมเกินไป" },
-        18: { name: "มหาจักร", good: "ความสำเร็จที่ต้องบุกเบิก ลุยแล้วรวยยิ่งใหญ่", bad: "เหนื่อยยากลำบากก่อนจะสบายสายตัวแทบขาด" },
-        19: { name: "กำลังดาวพฤหัส (มหาเศรษฐี)", good: "ผู้ใหญ่หนุนหลังสำเร็จยิ่งใหญ่ มั่งคั่งด้วยปัญญาและทรัพย์", bad: "ถูกคาดหวังสูง ต้องทำตัวเป็นแบบอย่างตลอดเวลา" },
-        20: { name: "กำลังดาวเสาร์ (มหาทุกข์)", good: "โครงการใหญ่ระดับชาติ ความอดทนเป็นเลิศ", bad: "ทุกข์สาหัส ภาระหนี้สิน ความเศร้าโศกเรื้อรัง" },
-        21: { name: "กำลังดาวศุกร์ (มหาลาภ)", good: "ความรัก ทรัพย์สมบัติ ความสำราญครบถ้วน", bad: "หลงมัวเมาในกามารมณ์และกิเลส" }
+        15: { name: "กำลังจันทร์มหาเสน่ห์", good: "เมตตามหานิยม ทรัพย์สินไหลลื่น มีความสุขสมหวัง", bad: "ใจอ่อนเสียการ ฟุ่มเฟือยเกินตัว" },
+        16: { name: "โสฬสมงคล", good: "มงคลสูงสุด ปลอดภัย ประสบความสำเร็จรอบด้าน", bad: "ทำผิดศีลจะได้รับผลกรรมเร็วและแรง" },
+        17: { name: "กำลังพุธมหาปัญญา", good: "สติปัญญาเลิศ เจรจาค้าขายรุ่งเรืองที่สุด", bad: "คิดมากเกินไป ใช้เล่ห์เหลี่ยมเกินไป" },
+        18: { name: "มหาจักร", good: "ความสำเร็จที่ต้องบุกเบิก ลุยแล้วรวยยิ่งใหญ่", bad: "เหนื่อยยากก่อนจะสบายสายตัวแทบขาด" },
+        19: { name: "กำลังพฤหัสมหาเศรษฐี", good: "ผู้ใหญ่หนุนสำเร็จยิ่งใหญ่ มั่งคั่งด้วยปัญญา", bad: "ถูกคาดหวังสูงจนกดดัน" },
+        20: { name: "กำลังเสาร์มหาทุกข์", good: "โครงการใหญ่ระดับชาติ ความอดทนเป็นเลิศ", bad: "ทุกข์สาหัส ภาระหนี้สิน ความเศร้าโศก" },
+        21: { name: "กำลังศุกร์มหาลาภ", good: "ความรัก ทรัพย์สมบัติ ความสำราญครบถ้วน", bad: "หลงมัวเมาในกามารมณ์และกิเลส" }
     };
 
     let currentGrid = [];
@@ -90,8 +106,8 @@
         let dt = new Date(dIn + 'T' + tIn);
         let dayOfWeek = dt.getDay() === 0 ? 1 : dt.getDay() + 1;
         let hours = dt.getHours();
-        let totalMin = (hours * 60) + dt.getMinutes();
         let bioDay = (hours < 6) ? (dayOfWeek === 1 ? 7 : dayOfWeek - 1) : dayOfWeek;
+        let totalMin = (hours * 60) + dt.getMinutes();
         let isNight = (totalMin >= 1080 || totalMin < 360);
         let refTime = isNight ? (totalMin < 360 ? totalMin + 1440 : totalMin) - 1080 : totalMin - 360;
         let yamIdx = Math.floor(refTime / 90) + 1;
@@ -118,7 +134,7 @@
             for(let c=0; c<7; c++) {
                 let v = currentGrid[r][c]; let h = houses[r][c];
                 let cls = v === kala ? 'is-kalakini' : (["หินะ", "อริ", "มรณะ", "พยายะ"].includes(h) ? 'is-bad-house' : '');
-                tr.innerHTML += `<td><span class="house-label">${h}</span><span class="digit-value">${v}</span></td>`;
+                tr.innerHTML += `<td class="${cls}" onclick="showDeepInfo('${h}', ${v})"><span class="house-label">${h}</span><span class="digit-value">${v}</span></td>`;
             }
             tb.appendChild(tr);
         }
@@ -130,20 +146,27 @@
         tb.appendChild(trB);
     }
 
+    function showDeepInfo(h, v) {
+        const p = planetMeanings[v];
+        const ctx = houseContexts[h];
+        document.getElementById('detailsTitle').innerHTML = `พยากรณ์ภพ ${h} (ดาว ${v})`;
+        document.getElementById('detailsContent').innerHTML = `
+            <strong>บริบท:</strong> ${ctx}<br>
+            <span class="good-tag">ทางดี:</span> ${p.name} ส่งผลให้${p.good}<br>
+            <span class="bad-tag">ทางเสีย:</span> ระวังอิทธิพล ${p.name} จะทำให้${p.bad}
+        `;
+    }
+
     function analyzePillar(col, baseVal) {
         const p1 = houses[0][col], p2 = houses[1][col], p3 = houses[2][col];
         const v1 = currentGrid[0][col], v2 = currentGrid[1][col], v3 = currentGrid[2][col];
         const data = baseInterpretations[baseVal] || { name: "ฐานทั่วไป", good: "พิจารณาตามดาวประธาน", bad: "พิจารณาตามภพสถิต" };
-        
-        document.getElementById('detailsTitle').innerHTML = `วิเคราะห์เสาที่ ${col+1}: สรุปผลที่ฐาน ${baseVal}`;
-        // แก้ไขจาก $ightarrow$ เป็น &rarr; เพื่อแสดงลูกศรที่ถูกต้อง
+        document.getElementById('detailsTitle').innerHTML = `วิเคราะห์เสาที่ ${col+1}: ฐาน ${baseVal}`;
         document.getElementById('detailsContent').innerHTML = `
-            <div class="pillar-box">เส้นทางเสา: ${p1}(${v1}) &rarr; ${p2}(${v2}) &rarr; ${p3}(${v3})</div>
-            <strong>บทสรุปเสานี้:</strong> เรื่องราวของ <strong>${p1}, ${p2} และ ${p3}</strong> จะถูกขับเคลื่อนด้วยพลังของ <strong>${data.name}</strong><br>
-            <span class="good-tag">จุดดี:</span> ${data.good}<br>
-            <span class="bad-tag">จุดเสีย:</span> ${data.bad}<br>
-            <hr>
-            <em>คำแนะนำ: หากเลขฐานนี้เป็นเลขมงคล (ขอบทอง) แสดงว่าผลลัพธ์ของภพทั้ง 3 จะจบลงด้วยความสำเร็จที่มั่นคงครับ</em>
+            <div class="pillar-box">เสาทางเดิน: ${p1}(${v1}) &rarr; ${p2}(${v2}) &rarr; ${p3}(${v3})</div>
+            <strong>บทสรุป:</strong> เรื่องของ ${p1}, ${p2} และ ${p3} สรุปผลที่ <strong>${data.name}</strong><br>
+            <span class="good-tag">ทางดี:</span> ${data.good}<br>
+            <span class="bad-tag">ทางเสีย:</span> ${data.bad}
         `;
     }
 
