--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7-Digit Master: Full Interpretation</title>
+    <title>7-Digit Master: Absolute Edition</title>
     <style>
-        :root { --primary: #1a2a3a; --gold: #c5a02e; --bg: #f4f7f6; --kalakini: #ffcdd2; --good-base: #fff9c4; --personal: #e3f2fd; }
+        :root { --primary: #1a2a3a; --gold: #c5a02e; --bg: #f4f7f6; --kalakini: #ffcdd2; --good-base: #fff9c4; }
         body { font-family: 'Tahoma', sans-serif; background: var(--bg); margin: 0; padding: 10px; display: flex; flex-direction: column; align-items: center; }
         .container { background: white; border: 1px solid #ddd; border-radius: 12px; max-width: 650px; width: 100%; padding: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
         .controls { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 15px; }
@@ -41,53 +41,48 @@
     <table class="result-table"><tbody id="tableBody"></tbody></table>
     <div id="detailsBox" class="details-panel">
         <div id="detailsTitle" class="details-title">บทวิเคราะห์พยากรณ์</div>
-        <div id="detailsContent">คลิกที่ช่องภพหรือเลขฐานเพื่ออ่านคำพยากรณ์เจาะลึก</div>
+        <div id="detailsContent">คลิกที่ช่องภพเพื่อดูความสัมพันธ์ "ดาวในภพ" หรือคลิกที่ฐานเพื่อวิเคราะห์เสาพยากรณ์</div>
     </div>
 </div>
 
 <script>
-    const houses = [
-        ["อัตตะ", "หินะ", "ธนัง", "สหัสชะ", "ปิตา", "มาตา", "โภคา"],
-        ["มัชฌิมา", "ตนุ", "กดุมภะ", "สหัชชะ", "พันธุ", "ปุตตะ", "อริ"],
-        ["ปัตนิ", "มรณะ", "สุภะ", "กัมมะ", "ลาภะ", "พยายะ", "ทาสา"]
+    // แก้ไขการจัดเรียงภพให้ถูกต้องตามมาตรฐาน 21 ภพ
+    const houseNames = [
+        ["อัตตะ", "หินะ", "ธนัง", "ปิตา", "มาตา", "โภคา", "มัชฌิมา"],
+        ["ตนุ", "กดุมภะ", "สหัชชะ", "พันธุ", "ปุตตะ", "อริ", "ปัตนิ"],
+        ["มรณะ", "สุภะ", "กัมมะ", "ลาภะ", "พยายะ", "ทาสา", "ทาสี"]
     ];
 
-    const planetMeanings = {
-        1: { name: "อาทิตย์", good: "มีเกียรติ ยศศักดิ์ ความเป็นผู้นำ มีอำนาจเด็ดขาด", bad: "ใจร้อน ถือตัวจัด หลงอำนาจ มักมีปัญหากับผู้ใหญ่" },
-        2: { name: "จันทร์", good: "เมตตามหานิยม งานบริการเด่น ได้รับความช่วยเหลือจากผู้หญิง ทรัพย์คล่องตัว", bad: "ใจอ่อนจนเสียการ ฟุ้งซ่าน จิตใจไม่นิ่ง เปลี่ยนใจง่าย" },
-        3: { name: "อังคาร", good: "ขยัน กล้าหาญ ตัดสินใจรวดเร็ว ชนะอุปสรรคและศัตรู", bad: "วู่วาม อุบัติเหตุ ผ่าตัด ทะเลาะวิวาทรุนแรง" },
-        4: { name: "พุธ", good: "ฉลาดในการสื่อสาร เจรจาค้าขายดีเด่น งานเอกสารสำเร็จ", bad: "คำพูดสร้างศัตรู ถูกนินทา เอกสารสัญญาผิดพลาด" },
-        5: { name: "พฤหัส", good: "มีสติปัญญา ผู้ใหญ่เมตตา ประสบความสำเร็จทางวิชาการและศีลธรรม", bad: "ดื้อรั้นในเหตุผลตัวเอง เชื่อมั่นเกินไปจนเสียงาน" },
-        6: { name: "ศุกร์", good: "โชคลาภ ทรัพย์สิน ความรักสมบูรณ์ มีความสุขสำราญ", bad: "หลงระเริงกามารมณ์ ฟุ่มเฟือย ปัญหาความรักซ้อน" },
-        7: { name: "เสาร์", good: "อดทนสูง จัดการโครงการระยะยาวดี มีโชคจากอสังหาริมทรัพย์", bad: "เครียดจัด ภาระหนักอึ้ง โรคเรื้อรัง การรอคอยที่ทรมาน" }
+    const planetData = {
+        1: { name: "อาทิตย์", good: "ชื่อเสียง เกียรติยศ ความเป็นผู้นำ มีอำนาจปกครอง", bad: "ใจร้อน ถือตัว ทะเยอทะยานจนเดือดร้อน" },
+        2: { name: "จันทร์", good: "เมตตามหานิยม ทรัพย์สินไหลลื่น งานบริการเด่น", bad: "ใจอ่อนจนเสียการ ฟุ้งซ่าน เปลี่ยนใจง่าย" },
+        3: { name: "อังคาร", good: "ขยัน กล้าหาญ ตัดสินใจรวดเร็ว ชนะคู่แข่ง", bad: "วู่วาม อุบัติเหตุ การทะเลาะวิวาท ผ่าตัด" },
+        4: { name: "พุธ", good: "ฉลาดเจรจา เอกสารสัญญาสำเร็จ ธุรกิจรุ่งเรือง", bad: "ถูกนินทา คำพูดสร้างศัตรู เอกสารผิดพลาด" },
+        5: { name: "พฤหัส", good: "สติปัญญา ผู้ใหญ่เมตตา ประสบความสำเร็จทางวิชาการ", bad: "ดื้อรั้นในเหตุผลตัวเอง เชื่อมั่นจนไม่ฟังใคร" },
+        6: { name: "ศุกร์", good: "โชคลาภ ทรัพย์สิน ความรักสมหวัง มีความสุข", bad: "ฟุ่มเฟือย หลงระเริงกามารมณ์ รักซ้อน" },
+        7: { name: "เสาร์", good: "อดทนสูง จัดการงานใหญ่ได้ดี โชคจากของเก่า/ที่ดิน", bad: "เครียดจัด ภาระหนัก โรคเรื้อรัง การรอคอยที่ยาวนาน" }
     };
 
-    const houseContexts = {
-        "อัตตะ": "ตัวตน/จิตใจในขณะนี้", "หินะ": "จุดอ่อน/อุปสรรค", "ธนัง": "เงินติดตัว/ทรัพย์สิน", "สหัสชะ": "การติดต่อใกล้ชิด", "ปิตา": "ผู้ใหญ่/พ่อ/หัวหน้า", "มาตา": "แม่/ผู้ดูแล/ความอบอุ่น", "โภคา": "บ้าน/รถ/ทรัพย์ใหญ่",
-        "มัชฌิมา": "ความพอดี/ส่วนกลาง", "ตนุ": "ภาพลักษณ์/สิ่งที่แสดงออก", "กดุมภะ": "รายได้/การทำมาหากิน", "สหัชชะ": "สังคม/เพื่อนฝูง/การเจรจา", "พันธุ": "ญาติพี่น้อง/รากฐานครอบครัว", "ปุตตะ": "บุตร/บริวาร/สิ่งที่เริ่มใหม่", "อริ": "อุปสรรค/คู่แข่ง/ปัญหาสุขภาพ",
-        "ปัตนิ": "คู่ครอง/หุ้นส่วน/คู่สัญญา", "มรณะ": "การสูญเสีย/การเปลี่ยนแปลง/ต่างประเทศ", "สุภะ": "ความสำเร็จ/ผู้ใหญ่หนุน/ต่างแดน", "กัมมะ": "งาน/หน้าที่/สิ่งที่ต้องทำ", "ลาภะ": "โชคลาภ/ความสำเร็จที่ได้มา", "พยายะ": "ความลับ/สิ่งที่ปิดบัง/ความเสื่อม", "ทาสา": "ความเหนื่อยยาก/งานส่วนรวม"
-    };
-
-    const baseInterpretations = {
-        3: { name: "กำลังจันทร์เล็ก", good: "มีเสน่ห์ เมตตา มีการเปลี่ยนแปลงนุ่มนวล", bad: "โลเล จิตใจอ่อนไหวง่าย" },
-        4: { name: "กำลังพุธเล็ก", good: "เจรจาดี มีไหวพริบ สื่อสารคล่อง", bad: "ระวังคำพูดสร้างศัตรู" },
-        5: { name: "กำลังพฤหัสเล็ก", good: "มีผู้ใหญ่ให้คำปรึกษา เริ่มต้นสิ่งใหม่ได้ดี", bad: "ดื้อรั้น ยึดติดความคิดตัวเอง" },
-        6: { name: "กำลังอาทิตย์", good: "มีชื่อเสียง พลังสร้างสรรค์สูง กล้าเผชิญหน้า", bad: "ใจร้อน อวดดี ระวังเรื่องยศตำแหน่ง" },
-        7: { name: "กำลังเสาร์เล็ก", good: "อดทนสูง ทำงานละเอียดได้ดี", bad: "เครียดจัด วิตกกังวล" },
-        8: { name: "กำลังอังคาร", good: "ขยัน รวดเร็ว ชนะอุปสรรคด้วยความกล้า", bad: "ระวังอุบัติเหตุ ทะเลาะวิวาท" },
-        9: { name: "พระเกตุ", good: "สิ่งศักดิ์สิทธิ์คุ้มครอง ลางสังหรณ์แม่น โชคลาภกะทันหัน", bad: "เพ้อฝัน ฟุ้งซ่าน เข้าใจยาก" },
-        10: { name: "กำลังเสาร์ (มฤตยู)", good: "การเปลี่ยนแปลงเพื่อสิ่งใหม่ ความมั่นคงระยะยาว", bad: "ภาระหนักอึ้ง ความลับถูกเปิดเผย" },
-        11: { name: "ราชาโชค", good: "โชคลาภมาเองโดยไม่ต้องเหนื่อย มีคนหยิบยื่นโอกาส", bad: "ประมาท ขาดการเตรียมตัว" },
-        12: { name: "กำลังราหู", good: "พลิกแพลงเก่ง ทันคน ธุรกิจต่างชาติโดดเด่น", bad: "มัวเมา หลงผิด ถูกหลอกลวง" },
-        13: { name: "มหาอุจ", good: "พลังอำนาจสูงสุด แข็งแกร่ง ชนะคู่แข่งเด็ดขาด", bad: "แตกหักง่าย ใช้อารมณ์เสียเรื่อง" },
-        14: { name: "จักรพรรดิ", good: "มั่งคั่ง มั่นคง บารมีสูง ได้เป็นเจ้าคนนายคน", bad: "ภาระรับผิดชอบสูงมากจนเครียด" },
-        15: { name: "กำลังจันทร์มหาเสน่ห์", good: "เมตตามหานิยม ทรัพย์สินไหลลื่น มีความสุขสมหวัง", bad: "ใจอ่อนเสียการ ฟุ่มเฟือยเกินตัว" },
-        16: { name: "โสฬสมงคล", good: "มงคลสูงสุด ปลอดภัย ประสบความสำเร็จรอบด้าน", bad: "ทำผิดศีลจะได้รับผลกรรมเร็วและแรง" },
-        17: { name: "กำลังพุธมหาปัญญา", good: "สติปัญญาเลิศ เจรจาค้าขายรุ่งเรืองที่สุด", bad: "คิดมากเกินไป ใช้เล่ห์เหลี่ยมเกินไป" },
-        18: { name: "มหาจักร", good: "ความสำเร็จที่ต้องบุกเบิก ลุยแล้วรวยยิ่งใหญ่", bad: "เหนื่อยยากก่อนจะสบายสายตัวแทบขาด" },
-        19: { name: "กำลังพฤหัสมหาเศรษฐี", good: "ผู้ใหญ่หนุนสำเร็จยิ่งใหญ่ มั่งคั่งด้วยปัญญา", bad: "ถูกคาดหวังสูงจนกดดัน" },
-        20: { name: "กำลังเสาร์มหาทุกข์", good: "โครงการใหญ่ระดับชาติ ความอดทนเป็นเลิศ", bad: "ทุกข์สาหัส ภาระหนี้สิน ความเศร้าโศก" },
-        21: { name: "กำลังศุกร์มหาลาภ", good: "ความรัก ทรัพย์สมบัติ ความสำราญครบถ้วน", bad: "หลงมัวเมาในกามารมณ์และกิเลส" }
+    const baseData = {
+        3: { n: "กำลังจันทร์เล็ก", g: "มีเสน่ห์ เมตตา เปลี่ยนแปลงนุ่มนวล", b: "โลเล อ่อนไหวง่าย" },
+        4: { n: "กำลังพุธเล็ก", g: "เจรจาดี มีไหวพริบ สื่อสารคล่อง", b: "ระวังคำพูดสร้างศัตรู" },
+        5: { n: "กำลังพฤหัสเล็ก", g: "ผู้ใหญ่ให้คำปรึกษา เริ่มต้นสิ่งใหม่ได้ดี", b: "ดื้อรั้น ยึดติดความคิดตัวเอง" },
+        6: { n: "กำลังอาทิตย์", g: "มีชื่อเสียง พลังสร้างสรรค์สูง กล้าเผชิญหน้า", b: "ใจร้อน อวดดี ระวังยศตำแหน่ง" },
+        7: { n: "กำลังเสาร์เล็ก", g: "อดทนสูง ทำงานละเอียดได้ดี", b: "เครียดจัด วิตกกังวล" },
+        8: { n: "กำลังอังคาร", g: "ขยัน รวดเร็ว ชนะอุปสรรคด้วยความกล้า", b: "ระวังอุบัติเหตุ ทะเลาะวิวาท" },
+        9: { n: "พระเกตุ", g: "สิ่งศักดิ์สิทธิ์คุ้มครอง ลางสังหรณ์แม่น โชคลาภกะทันหัน", b: "เพ้อฝัน ฟุ้งซ่าน เข้าใจยาก" },
+        10: { n: "กำลังเสาร์ (มฤตยู)", g: "เปลี่ยนแปลงเพื่อสิ่งใหม่ มั่นคงระยะยาว", b: "ภาระหนัก ความลับถูกเปิดเผย" },
+        11: { n: "ราชาโชค", g: "โชคลาภมาเองโดยไม่ต้องเหนื่อย มีคนหยิบยื่นโอกาส", b: "ประมาท ขาดการเตรียมตัว" },
+        12: { n: "กำลังราหู", g: "พลิกแพลงเก่ง ทันคน ธุรกิจต่างชาติโดดเด่น", b: "มัวเมา หลงผิด ถูกหลอกลวง" },
+        13: { n: "มหาอุจ", g: "พลังอำนาจสูงสุด แข็งแกร่ง ชนะคู่แข่งเด็ดขาด", b: "แตกหักง่าย ใช้อารมณ์เสียเรื่อง" },
+        14: { n: "จักรพรรดิ", g: "มั่งคั่ง มั่นคง บารมีสูง ได้เป็นเจ้าคนนายคน", b: "ภาระรับผิดชอบสูงมากจนเครียด" },
+        15: { n: "กำลังจันทร์มหาเสน่ห์", g: "เมตตามหานิยม ทรัพย์สินไหลลื่น สมหวัง", b: "ใจอ่อนเสียการ ฟุ่มเฟือยเกินตัว" },
+        16: { n: "โสฬสมงคล", g: "มงคลสูงสุด ปลอดภัย ประสบความสำเร็จรอบด้าน", b: "ทำผิดศีลจะได้รับผลกรรมเร็วและแรง" },
+        17: { n: "กำลังพุธมหาปัญญา", g: "สติปัญญาเลิศ เจรจาค้าขายรุ่งเรืองที่สุด", b: "คิดมากเกินไป ใช้เล่ห์เหลี่ยมเกินไป" },
+        18: { n: "มหาจักร", g: "สำเร็จที่ต้องบุกเบิก ลุยแล้วรวยยิ่งใหญ่", b: "เหนื่อยยากก่อนจะสบายสายตัวแทบขาด" },
+        19: { n: "กำลังพฤหัสมหาเศรษฐี", g: "ผู้ใหญ่หนุนสำเร็จยิ่งใหญ่ มั่งคั่งด้วยปัญญา", b: "ถูกคาดหวังสูงจนกดดัน" },
+        20: { n: "กำลังเสาร์มหาทุกข์", g: "โครงการใหญ่ระดับชาติ ความอดทนเป็นเลิศ", b: "ทุกข์สาหัส ภาระหนี้สิน ความเศร้าโศก" },
+        21: { n: "กำลังศุกร์มหาลาภ", g: "ความรัก ทรัพย์สมบัติ ความสำราญครบถ้วน", b: "หลงมัวเมาในกามารมณ์และกิเลส" }
     };
 
     let currentGrid = [];
@@ -132,7 +127,7 @@
         for(let r=0; r<3; r++) {
             let tr = document.createElement('tr');
             for(let c=0; c<7; c++) {
-                let v = currentGrid[r][c]; let h = houses[r][c];
+                let v = currentGrid[r][c]; let h = houseNames[r][c];
                 let cls = v === kala ? 'is-kalakini' : (["หินะ", "อริ", "มรณะ", "พยายะ"].includes(h) ? 'is-bad-house' : '');
                 tr.innerHTML += `<td class="${cls}" onclick="showDeepInfo('${h}', ${v})"><span class="house-label">${h}</span><span class="digit-value">${v}</span></td>`;
             }
@@ -147,29 +142,27 @@
     }
 
     function showDeepInfo(h, v) {
-        const p = planetMeanings[v];
-        const ctx = houseContexts[h];
-        document.getElementById('detailsTitle').innerHTML = `พยากรณ์ภพ ${h} (ดาว ${v})`;
+        const p = planetData[v];
+        document.getElementById('detailsTitle').innerHTML = `วิเคราะห์ดาว ${v} ในภพ ${h}`;
         document.getElementById('detailsContent').innerHTML = `
-            <strong>บริบท:</strong> ${ctx}<br>
-            <span class="good-tag">ทางดี:</span> ${p.name} ส่งผลให้${p.good}<br>
-            <span class="bad-tag">ทางเสีย:</span> ระวังอิทธิพล ${p.name} จะทำให้${p.bad}
+            <strong>ความหมายดาว:</strong> ดาว${p.name}สถิตในภพ${h}<br>
+            <span class="good-tag">จุดเด่น:</span> ${p.good}<br>
+            <span class="bad-tag">จุดระวัง:</span> ${p.bad}
         `;
     }
 
-    function analyzePillar(col, baseVal) {
-        const p1 = houses[0][col], p2 = houses[1][col], p3 = houses[2][col];
+    function analyzePillar(col, val) {
+        const p1 = houseNames[0][col], p2 = houseNames[1][col], p3 = houseNames[2][col];
         const v1 = currentGrid[0][col], v2 = currentGrid[1][col], v3 = currentGrid[2][col];
-        const data = baseInterpretations[baseVal] || { name: "ฐานทั่วไป", good: "พิจารณาตามดาวประธาน", bad: "พิจารณาตามภพสถิต" };
-        document.getElementById('detailsTitle').innerHTML = `วิเคราะห์เสาที่ ${col+1}: ฐาน ${baseVal}`;
+        const d = baseData[val] || { n: "กำลังทั่วไป", g: "พิจารณาตามดาวประธาน", b: "พิจารณาตามภพสถิต" };
+        document.getElementById('detailsTitle').innerHTML = `วิเคราะห์เสาที่ ${col+1}: ฐาน ${val}`;
         document.getElementById('detailsContent').innerHTML = `
-            <div class="pillar-box">เสาทางเดิน: ${p1}(${v1}) &rarr; ${p2}(${v2}) &rarr; ${p3}(${v3})</div>
-            <strong>บทสรุป:</strong> เรื่องของ ${p1}, ${p2} และ ${p3} สรุปผลที่ <strong>${data.name}</strong><br>
-            <span class="good-tag">ทางดี:</span> ${data.good}<br>
-            <span class="bad-tag">ทางเสีย:</span> ${data.bad}
+            <div class="pillar-box">เส้นทางเสา: ${p1}(${v1}) &rarr; ${p2}(${v2}) &rarr; ${p3}(${v3})</div>
+            <strong>บทสรุปฐาน ${d.n}:</strong><br>
+            <span class="good-tag">จุดเด่น:</span> ${d.g}<br>
+            <span class="bad-tag">จุดระวัง:</span> ${d.b}
         `;
     }
-
     window.onload = setNow;
 </script>
 </body>
