--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7-Digit Master: Absolute Edition</title>
+    <title>7-Digit Master: Ultimate Edition</title>
     <style>
-        :root { --primary: #1a2a3a; --gold: #c5a02e; --bg: #f4f7f6; --kalakini: #ffcdd2; --good-base: #fff9c4; }
+        :root { --primary: #1a2a3a; --gold: #c5a02e; --bg: #f4f7f6; --kalakini: #ffcdd2; --good-base: #fff9c4; --personal: #e3f2fd; }
         body { font-family: 'Tahoma', sans-serif; background: var(--bg); margin: 0; padding: 10px; display: flex; flex-direction: column; align-items: center; }
         .container { background: white; border: 1px solid #ddd; border-radius: 12px; max-width: 650px; width: 100%; padding: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
         .controls { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 15px; }
         input, button { padding: 12px; border-radius: 6px; border: 1px solid #ccc; font-size: 15px; }
-        button { cursor: pointer; background: var(--primary); color: white; border: none; font-weight: bold; transition: 0.3s; }
-        button:hover { opacity: 0.9; }
+        button { cursor: pointer; background: var(--primary); color: white; border: none; font-weight: bold; }
         .btn-now { background: var(--gold); }
         .result-table { width: 100%; border-collapse: collapse; table-layout: fixed; margin-bottom: 15px; }
         td { border: 1px solid #333; text-align: center; vertical-align: middle; padding: 8px 0; height: 65px; cursor: pointer; }
@@ -19,6 +18,8 @@
         .digit-value { font-size: 24px; font-weight: bold; display: block; }
         .is-kalakini { background: var(--kalakini) !important; color: #b71c1c; }
         .is-good-base { background: var(--good-base); border: 2px solid var(--gold); }
+        .is-bad-house { color: #d32f2f; background: #fff5f5; }
+        .is-personal { border: 2px dashed #2196f3; background: var(--personal); }
         .row-base { border-top: 2px solid #333; background: #fafafa; }
         .base-label { font-size: 10px; font-weight: bold; color: #b71c1c; }
         .base-value { font-size: 24px; font-weight: bold; color: #b71c1c; }
@@ -40,52 +41,52 @@
     </div>
     <table class="result-table"><tbody id="tableBody"></tbody></table>
     <div id="detailsBox" class="details-panel">
-        <div id="detailsTitle" class="details-title">บทวิเคราะห์พยากรณ์</div>
-        <div id="detailsContent">คลิกที่ช่องภพเพื่อดูความสัมพันธ์ "ดาวในภพ" หรือคลิกที่ฐานเพื่อวิเคราะห์เสาพยากรณ์</div>
+        <div id="detailsTitle" class="details-title">บทวิเคราะห์ Master Tools</div>
+        <div id="detailsContent">คลิกที่ช่องภพเพื่อดูพยากรณ์สัมพันธ์ หรือคลิกที่ฐานเพื่อวิเคราะห์เสาพยากรณ์ตามตำราพลูหลวง</div>
     </div>
 </div>
 
 <script>
-    // แก้ไขการจัดเรียงภพให้ถูกต้องตามมาตรฐาน 21 ภพ
     const houseNames = [
-        ["อัตตะ", "หินะ", "ธนัง", "ปิตา", "มาตา", "โภคา", "มัชฌิมา"],
-        ["ตนุ", "กดุมภะ", "สหัชชะ", "พันธุ", "ปุตตะ", "อริ", "ปัตนิ"],
-        ["มรณะ", "สุภะ", "กัมมะ", "ลาภะ", "พยายะ", "ทาสา", "ทาสี"]
+        ["อัตตะ", "หินะ", "ธนัง", "สหัสชะ", "ปิตา", "มาตา", "โภคา"],
+        ["มัชฌิมา", "ตนุ", "กดุมภะ", "สหัชชะ", "พันธุ", "ปุตตะ", "อริ"],
+        ["ปัตนิ", "มรณะ", "สุภะ", "กัมมะ", "ลาภะ", "พยายะ", "ทาสา"]
     ];
 
-    const planetData = {
-        1: { name: "อาทิตย์", good: "ชื่อเสียง เกียรติยศ ความเป็นผู้นำ มีอำนาจปกครอง", bad: "ใจร้อน ถือตัว ทะเยอทะยานจนเดือดร้อน" },
-        2: { name: "จันทร์", good: "เมตตามหานิยม ทรัพย์สินไหลลื่น งานบริการเด่น", bad: "ใจอ่อนจนเสียการ ฟุ้งซ่าน เปลี่ยนใจง่าย" },
-        3: { name: "อังคาร", good: "ขยัน กล้าหาญ ตัดสินใจรวดเร็ว ชนะคู่แข่ง", bad: "วู่วาม อุบัติเหตุ การทะเลาะวิวาท ผ่าตัด" },
-        4: { name: "พุธ", good: "ฉลาดเจรจา เอกสารสัญญาสำเร็จ ธุรกิจรุ่งเรือง", bad: "ถูกนินทา คำพูดสร้างศัตรู เอกสารผิดพลาด" },
-        5: { name: "พฤหัส", good: "สติปัญญา ผู้ใหญ่เมตตา ประสบความสำเร็จทางวิชาการ", bad: "ดื้อรั้นในเหตุผลตัวเอง เชื่อมั่นจนไม่ฟังใคร" },
-        6: { name: "ศุกร์", good: "โชคลาภ ทรัพย์สิน ความรักสมหวัง มีความสุข", bad: "ฟุ่มเฟือย หลงระเริงกามารมณ์ รักซ้อน" },
-        7: { name: "เสาร์", good: "อดทนสูง จัดการงานใหญ่ได้ดี โชคจากของเก่า/ที่ดิน", bad: "เครียดจัด ภาระหนัก โรคเรื้อรัง การรอคอยที่ยาวนาน" }
+    const baseData = {
+        3: { n: "กำลังดาวจันทร์ (เล็ก)", g: "มีเสน่ห์ เมตตา มีการเปลี่ยนแปลงนุ่มนวล", b: "โลเล อ่อนไหวง่าย" },
+        4: { n: "กำลังดาวพุธ (เล็ก)", g: "เจรจาดี มีไหวพริบ สื่อสารคล่อง", b: "ระวังคำพูดสร้างศัตรู" },
+        5: { n: "กำลังดาวพฤหัส (เล็ก)", g: "ผู้ใหญ่ให้คำปรึกษา เริ่มต้นสิ่งใหม่ได้ดี", b: "ดื้อรั้น ยึดติดความคิดตัวเอง" },
+        6: { n: "กำลังดาวอาทิตย์", g: "มีชื่อเสียง พลังสร้างสรรค์สูง กล้าเผชิญหน้า", b: "ใจร้อน อวดดี ระวังยศตำแหน่ง" },
+        7: { n: "กำลังดาวเสาร์ (เล็ก)", g: "อดทนสูง ทำงานละเอียดได้ดี", b: "เครียดจัด วิตกกังวล" },
+        8: { n: "กำลังดาวอังคาร", g: "ขยัน รวดเร็ว ชนะอุปสรรคด้วยความกล้า", b: "ระวังอุบัติเหตุ ทะเลาะวิวาท" },
+        9: { n: "พระเกตุ", g: "สิ่งศักดิ์สิทธิ์คุ้มครอง ลางสังหรณ์แม่น โชคลาภกะทันหัน", b: "เพ้อฝัน ฟุ้งซ่าน เข้าใจยาก" },
+        10: { n: "กำลังดาวเสาร์ (มฤตยู)", g: "เปลี่ยนแปลงเพื่อสิ่งใหม่ มั่นคงระยะยาว", b: "ภาระหนัก ความลับถูกเปิดเผย" },
+        11: { n: "ราชาโชค", g: "โชคลาภมาเองโดยไม่ต้องเหนื่อย มีคนหยิบยื่นโอกาส", b: "ประมาท ขาดการเตรียมตัว" },
+        12: { n: "กำลังดาวราหู", g: "พลิกแพลงเก่ง ทันคน ธุรกิจต่างชาติโดดเด่น", b: "มัวเมา หลงผิด ถูกหลอกลวง" },
+        13: { n: "มหาอุจ (กำลังอังคาร)", g: "พลังอำนาจสูงสุด แข็งแกร่ง ชนะคู่แข่งเด็ดขาด", b: "แตกหักง่าย ใช้อารมณ์เสียเรื่อง" },
+        14: { n: "จักรพรรดิ", g: "มั่งคั่ง มั่นคง บารมีสูง ได้เป็นเจ้าคนนายคน", b: "ภาระรับผิดชอบสูงมากจนเครียด" },
+        15: { n: "กำลังดาวจันทร์", g: "เมตตามหานิยม ทรัพย์สินไหลลื่น สมหวัง", b: "ใจอ่อนเสียการ ฟุ่มเฟือยเกินตัว" },
+        16: { n: "โสฬสมงคล", g: "มงคลสูงสุด ปลอดภัย ประสบความสำเร็จรอบด้าน", b: "ทำผิดศีลจะได้รับผลกรรมเร็วและแรง" },
+        17: { n: "กำลังดาวพุธ", g: "สติปัญญาเลิศ เจรจาค้าขายรุ่งเรืองที่สุด", b: "คิดมากเกินไป ใช้เล่ห์เหลี่ยมเกินไป" },
+        18: { n: "มหาจักร", g: "สำเร็จที่ต้องบุกเบิก ลุยแล้วรวยยิ่งใหญ่", b: "เหนื่อยยากก่อนจะสบายสายตัวแทบขาด" },
+        19: { n: "กำลังดาวพฤหัส", g: "ผู้ใหญ่หนุนสำเร็จยิ่งใหญ่ มั่งคั่งด้วยปัญญา", b: "ถูกคาดหวังสูงจนกดดัน" },
+        20: { n: "กำลังดาวเสาร์ (มหาทุกข์)", g: "โครงการใหญ่ระดับชาติ ความอดทนเป็นเลิศ", b: "ทุกข์สาหัส ภาระหนี้สิน ความเศร้าโศก" },
+        21: { n: "กำลังดาวศุกร์", g: "ความรัก ทรัพย์สมบัติ ความสำราญครบถ้วน", b: "หลงมัวเมาในกามารมณ์และกิเลส" }
     };
 
-    const baseData = {
-        3: { n: "กำลังจันทร์เล็ก", g: "มีเสน่ห์ เมตตา เปลี่ยนแปลงนุ่มนวล", b: "โลเล อ่อนไหวง่าย" },
-        4: { n: "กำลังพุธเล็ก", g: "เจรจาดี มีไหวพริบ สื่อสารคล่อง", b: "ระวังคำพูดสร้างศัตรู" },
-        5: { n: "กำลังพฤหัสเล็ก", g: "ผู้ใหญ่ให้คำปรึกษา เริ่มต้นสิ่งใหม่ได้ดี", b: "ดื้อรั้น ยึดติดความคิดตัวเอง" },
-        6: { n: "กำลังอาทิตย์", g: "มีชื่อเสียง พลังสร้างสรรค์สูง กล้าเผชิญหน้า", b: "ใจร้อน อวดดี ระวังยศตำแหน่ง" },
-        7: { n: "กำลังเสาร์เล็ก", g: "อดทนสูง ทำงานละเอียดได้ดี", b: "เครียดจัด วิตกกังวล" },
-        8: { n: "กำลังอังคาร", g: "ขยัน รวดเร็ว ชนะอุปสรรคด้วยความกล้า", b: "ระวังอุบัติเหตุ ทะเลาะวิวาท" },
-        9: { n: "พระเกตุ", g: "สิ่งศักดิ์สิทธิ์คุ้มครอง ลางสังหรณ์แม่น โชคลาภกะทันหัน", b: "เพ้อฝัน ฟุ้งซ่าน เข้าใจยาก" },
-        10: { n: "กำลังเสาร์ (มฤตยู)", g: "เปลี่ยนแปลงเพื่อสิ่งใหม่ มั่นคงระยะยาว", b: "ภาระหนัก ความลับถูกเปิดเผย" },
-        11: { n: "ราชาโชค", g: "โชคลาภมาเองโดยไม่ต้องเหนื่อย มีคนหยิบยื่นโอกาส", b: "ประมาท ขาดการเตรียมตัว" },
-        12: { n: "กำลังราหู", g: "พลิกแพลงเก่ง ทันคน ธุรกิจต่างชาติโดดเด่น", b: "มัวเมา หลงผิด ถูกหลอกลวง" },
-        13: { n: "มหาอุจ", g: "พลังอำนาจสูงสุด แข็งแกร่ง ชนะคู่แข่งเด็ดขาด", b: "แตกหักง่าย ใช้อารมณ์เสียเรื่อง" },
-        14: { n: "จักรพรรดิ", g: "มั่งคั่ง มั่นคง บารมีสูง ได้เป็นเจ้าคนนายคน", b: "ภาระรับผิดชอบสูงมากจนเครียด" },
-        15: { n: "กำลังจันทร์มหาเสน่ห์", g: "เมตตามหานิยม ทรัพย์สินไหลลื่น สมหวัง", b: "ใจอ่อนเสียการ ฟุ่มเฟือยเกินตัว" },
-        16: { n: "โสฬสมงคล", g: "มงคลสูงสุด ปลอดภัย ประสบความสำเร็จรอบด้าน", b: "ทำผิดศีลจะได้รับผลกรรมเร็วและแรง" },
-        17: { n: "กำลังพุธมหาปัญญา", g: "สติปัญญาเลิศ เจรจาค้าขายรุ่งเรืองที่สุด", b: "คิดมากเกินไป ใช้เล่ห์เหลี่ยมเกินไป" },
-        18: { n: "มหาจักร", g: "สำเร็จที่ต้องบุกเบิก ลุยแล้วรวยยิ่งใหญ่", b: "เหนื่อยยากก่อนจะสบายสายตัวแทบขาด" },
-        19: { n: "กำลังพฤหัสมหาเศรษฐี", g: "ผู้ใหญ่หนุนสำเร็จยิ่งใหญ่ มั่งคั่งด้วยปัญญา", b: "ถูกคาดหวังสูงจนกดดัน" },
-        20: { n: "กำลังเสาร์มหาทุกข์", g: "โครงการใหญ่ระดับชาติ ความอดทนเป็นเลิศ", b: "ทุกข์สาหัส ภาระหนี้สิน ความเศร้าโศก" },
-        21: { n: "กำลังศุกร์มหาลาภ", g: "ความรัก ทรัพย์สมบัติ ความสำราญครบถ้วน", b: "หลงมัวเมาในกามารมณ์และกิเลส" }
+    const relationData = {
+        1: { p: "อาทิตย์: อำนาจ/ร้อนแรง", at: { g: "มีภาวะผู้นำโดดเด่น", b: "ทิฐิแรง เอาตนเองเป็นใหญ่" }, money: { g: "ได้เงินจากตำแหน่งหน้าที่", b: "จ่ายเพื่อหน้าตาจนเก็บไม่อยู่" }, trouble: { g: "ชนะศัตรูด้วยบารมี", b: "ระวังขัดแย้งกับผู้ใหญ่" }, general: { g: "มีเกียรติในเรื่องนั้นๆ", b: "ร้อนแรงจนมีปัญหาขัดแย้ง" } },
+        2: { p: "จันทร์: เมตตา/นุ่มนวล", at: { g: "มีเสน่ห์ คนรักใคร่", b: "ใจอ่อน ขาดความเด็ดขาด" }, money: { g: "เงินไหลลื่นจากงานบริการ", b: "เสียเงินเพราะความใจอ่อน" }, trouble: { g: "คลี่คลายด้วยการเจรจา", b: "ระวังผู้หญิงนำปัญหามาให้" }, general: { g: "ได้รับความเมตตาช่วยเหลือ", b: "โลเลจนเรื่องไม่จบสิ้น" } },
+        3: { p: "อังคาร: ขยัน/ปะทะ", at: { g: "ขยัน รวดเร็ว เด็ดขาด", b: "ใจร้อนวู่วาม ใช้อารมณ์" }, money: { g: "ได้ลาภจากความเหนื่อยยาก", b: "จ่ายเพราะความวู่วาม" }, trouble: { g: "ฝ่าฟันอุปสรรคได้เร็ว", b: "ระวังอุบัติเหตุ/ทะเลาะวิวาท" }, general: { g: "มุ่งมั่นตั้งใจสูงมาก", b: "ระวังการปะทะขัดแย้ง" } },
+        4: { p: "พุธ: เจรจา/สังคม", at: { g: "ฉลาดพูด มีไหวพริบ", b: "พูดมากไปจนเป็นภัย" }, money: { g: "ลาภจากการติดต่อ/นายหน้า", b: "โกงเอกสาร/ตกลงไม่ลงตัว" }, trouble: { g: "แก้ปัญหาได้ด้วยคำพูด", b: "ระวังถูกนินทา/เอกสารหาย" }, general: { g: "การสื่อสารราบรื่นดี", b: "ผิดพลาดเพราะการสื่อสาร" } },
+        5: { p: "พฤหัส: สติปัญญา/ผู้ใหญ่", at: { g: "มีคุณธรรม ผู้ใหญ่เอ็นดู", b: "ดื้อรั้นในทฤษฎี/ยึดติด" }, money: { g: "ลาภจากวิชาความรู้", b: "เสียเงินช่วยผู้อื่นมากไป" }, trouble: { g: "ผู้ใหญ่ช่วยให้พ้นภัย", b: "ปัญหาข้อกฎหมาย/ระเบียบ" }, general: { g: "สำเร็จด้วยคำแนะนำที่ดี", b: "กดดันจากกฎระเบียบมากไป" } },
+        6: { p: "ศุกร์: ความสุข/ทรัพย์", at: { g: "รสนิยมดี มีโชคติดตัว", b: "หลงมัวเมาในกาม/กิเลส" }, money: { g: "เงินไหลมาเทมา มีลาภลอย", b: "ฟุ่มเฟือย/หมดไปกับความใคร่" }, trouble: { g: "ความรัก/การเงินจะคลี่คลาย", b: "ปัญหาชู้สาว/ถูกหลอกลวง" }, general: { g: "ราบรื่นและมีความสุข", b: "ฟุ่มเฟือยจนเสียระบบ" } },
+        7: { p: "เสาร์: อดทน/ภาระ", at: { g: "อดทนสูง วางแผนรอบคอบ", b: "เครียด อมทุกข์ คิดมาก" }, money: { g: "ลาภจากที่ดิน/ของเก่า", b: "หนี้สิน/เงินทองติดขัด" }, trouble: { g: "อดทนจะผ่านอุปสรรคใหญ่", b: "โรคเรื้อรัง/สูญเสียใหญ่" }, general: { g: "เรื่องนั้นจะมั่นคงยาวนาน", b: "เหนื่อยยากและล่าช้ามาก" } }
     };
 
     let currentGrid = [];
+    const personalID = [7, 4, 3];
 
     function setNow() {
         const now = new Date();
@@ -99,19 +100,19 @@
         const tIn = document.getElementById('inputTime').value;
         if(!dIn || !tIn) return;
         let dt = new Date(dIn + 'T' + tIn);
-        let dayOfWeek = dt.getDay() === 0 ? 1 : dt.getDay() + 1;
-        let hours = dt.getHours();
-        let bioDay = (hours < 6) ? (dayOfWeek === 1 ? 7 : dayOfWeek - 1) : dayOfWeek;
-        let totalMin = (hours * 60) + dt.getMinutes();
-        let isNight = (totalMin >= 1080 || totalMin < 360);
-        let refTime = isNight ? (totalMin < 360 ? totalMin + 1440 : totalMin) - 1080 : totalMin - 360;
-        let yamIdx = Math.floor(refTime / 90) + 1;
-        let firstY = isNight ? ((bioDay + 4 > 7) ? bioDay + 4 - 7 : bioDay + 4) : bioDay;
+        let d = dt.getDay() === 0 ? 1 : dt.getDay() + 1;
+        let h = dt.getHours();
+        let bioD = (h < 6) ? (d === 1 ? 7 : d - 1) : d;
+        let totalM = (h * 60) + dt.getMinutes();
+        let isN = (totalM >= 1080 || totalM < 360);
+        let refT = isN ? (totalM < 360 ? totalM + 1440 : totalM) - 1080 : totalM - 360;
+        let yIdx = Math.floor(refT / 90) + 1;
+        let fY = isN ? ((bioD + 4 > 7) ? bioD + 4 - 7 : bioD + 4) : bioD;
         const seq = [1, 6, 4, 2, 7, 5, 3];
-        let mYam = firstY;
-        for(let i=1; i < yamIdx; i++) { mYam = seq[(seq.indexOf(mYam) + 1) % 7]; }
-        let lYam = (mYam + Math.floor((refTime % 90) / 12.85)) % 7 || 7;
-        renderTable(bioDay, mYam, lYam);
+        let mY = fY;
+        for(let i=1; i<yIdx; i++) { mY = seq[(seq.indexOf(mY) + 1) % 7]; }
+        let lY = (mY + Math.floor((refT % 90) / 12.85)) % 7 || 7;
+        renderTable(bioD, mY, lY);
     }
 
     function renderTable(d, y, ly) {
@@ -129,7 +130,8 @@
             for(let c=0; c<7; c++) {
                 let v = currentGrid[r][c]; let h = houseNames[r][c];
                 let cls = v === kala ? 'is-kalakini' : (["หินะ", "อริ", "มรณะ", "พยายะ"].includes(h) ? 'is-bad-house' : '');
-                tr.innerHTML += `<td class="${cls}" onclick="showDeepInfo('${h}', ${v})"><span class="house-label">${h}</span><span class="digit-value">${v}</span></td>`;
+                if(personalID.includes(v)) cls += ' is-personal';
+                tr.innerHTML += `<td class="${cls}" onclick="showRelationalInfo('${h}', ${v})"><span class="house-label">${h}</span><span class="digit-value">${v}</span></td>`;
             }
             tb.appendChild(tr);
         }
@@ -141,26 +143,33 @@
         tb.appendChild(trB);
     }
 
-    function showDeepInfo(h, v) {
-        const p = planetData[v];
-        document.getElementById('detailsTitle').innerHTML = `วิเคราะห์ดาว ${v} ในภพ ${h}`;
+    function showRelationalInfo(h, v) {
+        const p = relationData[v];
+        let type = 'general';
+        if (["อัตตะ", "ตนุ"].includes(h)) type = 'at';
+        else if (["ธนัง", "กดุมภะ", "ลาภะ"].includes(h)) type = 'money';
+        else if (["หินะ", "อริ", "มรณะ", "พยายะ"].includes(h)) type = 'trouble';
+
+        document.getElementById('detailsTitle').innerHTML = `พยากรณ์สัมพันธ์: ดาว ${v} ในภพ ${h}`;
         document.getElementById('detailsContent').innerHTML = `
-            <strong>ความหมายดาว:</strong> ดาว${p.name}สถิตในภพ${h}<br>
-            <span class="good-tag">จุดเด่น:</span> ${p.good}<br>
-            <span class="bad-tag">จุดระวัง:</span> ${p.bad}
+            <strong>ดาว ${p.p}</strong> ในตำแหน่ง <strong>ภพ ${h}</strong><br>
+            <span class="good-tag">จุดเด่น:</span> ${p[type].g}<br>
+            <span class="bad-tag">จุดระวัง:</span> ${p[type].b}
         `;
     }
 
     function analyzePillar(col, val) {
         const p1 = houseNames[0][col], p2 = houseNames[1][col], p3 = houseNames[2][col];
         const v1 = currentGrid[0][col], v2 = currentGrid[1][col], v3 = currentGrid[2][col];
-        const d = baseData[val] || { n: "กำลังทั่วไป", g: "พิจารณาตามดาวประธาน", b: "พิจารณาตามภพสถิต" };
-        document.getElementById('detailsTitle').innerHTML = `วิเคราะห์เสาที่ ${col+1}: ฐาน ${val}`;
+        const d = baseData[val] || { n: "กำลังสะสม", g: "พิจารณาตามกำลังดาวประธาน", b: "พิจารณาตามภพที่สถิต" };
+        document.getElementById('detailsTitle').innerHTML = `วิเคราะห์เสาที่ ${col+1}: สรุปผลฐาน ${val}`;
         document.getElementById('detailsContent').innerHTML = `
             <div class="pillar-box">เส้นทางเสา: ${p1}(${v1}) &rarr; ${p2}(${v2}) &rarr; ${p3}(${v3})</div>
-            <strong>บทสรุปฐาน ${d.n}:</strong><br>
-            <span class="good-tag">จุดเด่น:</span> ${d.g}<br>
-            <span class="bad-tag">จุดระวัง:</span> ${d.b}
+            <strong>ฐาน ${d.n}:</strong><br>
+            <span class="good-tag">บทสรุปทางดี:</span> ${d.g}<br>
+            <span class="bad-tag">บทสรุปทางเสีย:</span> ${d.b}<br>
+            <hr>
+            <em>ความหมาย: เรื่องราวจากภพทั้ง 3 จะจบลงด้วยคุณภาพของฐานนี้เป็นสำคัญครับ</em>
         `;
     }
     window.onload = setNow;
